fix(css): Resolve flash of grey on iOS.

--- a/styles/limelight.css
+++ b/styles/limelight.css
@@ -13,8 +13,8 @@
     pointer-events: none;
     z-index: 999;
     z-index: var(--limelight-z-index);
-    transition: opacity 0.3s, visibility 0.3s;
-    transition: opacity var(--limelight-overlay-transition-duration), visibility var(--limelight-overlay-transition-duration);
+    transition: opacity 0.3s;
+    transition: opacity var(--limelight-overlay-transition-duration);
 }
 
 .limelight--is-active {
